Final project with some tests added. Includes node_modules as requirement and dist folder as target folder
