# src/config/swagger.json
@@ -96,7 +96,7 @@
         }
       }
     },
-    "?/?": {
+    "/v1/account/transactions/{transactionId}": {
       "get": {
         "tags": [
           "transactions"
@@ -118,16 +118,16 @@
           }
         ],
         "responses": {
-          "2xx": {
+          "200": {
             "description": "successful operation",
             "schema": {
               "$ref": "#/definitions/Transaction"
             }
           },
-          "4xx": {
+          "400": {
             "description": "invalid ID supplied"
           },
-          "4xy": {
+          "404": {
             "description": "transaction not found"
           }
         }
