# src/routes/account.routes.ts
@@ -1,8 +1,15 @@
 import { Router } from 'express';
-import { getAccountBalance } from '../controller/account.controller';
+import { getAccountBalance,
+        getAccountTransactions,
+        addTransaction,
+        findTransactionById } from '../controller/account.controller';
 
 const router = Router();
 
 router.route('/v1/account/balance').get(getAccountBalance);
+router.route('/v1/account/transactions').get(getAccountTransactions);
+router.route('/v1/account/transactions').post(addTransaction);
+router.route('/v1/account/transactions/:id').get(findTransactionById);
+
 
 export default router;
